--- a/css/custom.css
+++ b/css/custom.css
@@ -20,71 +20,80 @@
   font-size: 1em;
 }
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    bottom: 3rem;
-    z-index: 10;
-  }
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 40rem;
-    width: 100%;
-    margin-top: 56px;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-  }
- 
-  .welcome-carousel-image1{
-    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
-    background-image:url('../images/carousel1.jpeg');
-  }
-
-  .welcome-carousel-image2{
-    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
-    background-image:url('../images/coffeeMachine.webp');
-  }
-
-  .welcome-carousel-image3{
-    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
-    background-image:url('../images/carousel3.jpeg');
-  }
-
   .coffeemachine {
     margin-top: 60px;
   }
 
   .card-img-top {
-    object-fit:contain; /* or "contain" depending on your preference */
-    height: 300px; /* Adjust the height as needed */
+    object-fit:contain; 
+    height: 300px; 
 }
-.card {
-  margin-bottom: 20px;
-  text-align: center;
-  padding: 0;
+  .card {
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 0;
+  }
+
+  .coffeeparty {
+    margin-top: 60px;
+  }
+  .allproducts {
+    margin-top: 60px;
+  }
+
+  .coffeeparty-card .card-img-top {
+    object-fit: cover;
+    
+  }
+
+  .allproducts-card .card-img-top {
+    object-fit: cover;
+  }
+  .contact .card-img-top {
+    object-fit: contain;
+    height: 80px;
+    width: 80px;
+    border: rgb(232, 226, 226) solid 1px; 
+  }
+
+  .contact .card {
+    text-align: center;
+  }
+
+  /* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
 }
 
-.coffeeparty {
-  margin-top: 60px;
-}
-.allproducts {
-  margin-top: 60px;
-}
-
-.coffeeparty-card .card-img-top {
-   object-fit: cover;
-   
+.carousel-item {
+  height: 40rem;
+  width: 100%;
+  margin-top: 56px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
-.allproducts-card .card-img-top {
-  object-fit: cover;
+.welcome-carousel-image1{
+  box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
+  background-image:url('../images/carousel1.jpeg');
 }
 
+.welcome-carousel-image2{
+  box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
+  background-image:url('../images/coffeeMachine.webp');
+}
+
+.welcome-carousel-image3{
+  box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.3);
+  background-image:url('../images/carousel3.jpeg');
+}
+
+/* Jumbotron */
 .jumbotron-other {
   background: url('../images/carousel3.jpeg') no-repeat fixed;
 }
@@ -94,14 +103,12 @@
   height: 20vh;
   background-size: cover;
 }
-
-.contact .card-img-top {
-  object-fit: contain;
-  height: 80px;
-  width: 80px;
-  border: rgb(232, 226, 226) solid 1px; 
+.jumbotron-detail-coffeemachine {
+  background: url('../images/coffeeMachine2.png') no-repeat fixed;
 }
 
-.contact .card {
-  text-align: center;
+/* shopping cart offcanvas */
+.shopping-cart-offcanvas {
+  width: 500px;
 }
+
